processed/gerrit/txt/60008.txt
Change:     60008
Subject:    LU-19152 lnet: struct lnet_ioctl_config_ni too large for stack
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/60008
Change-Id:  I02cc4a15a859bd739b979563310e91f235d03981
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Shaun Tancheff
Created:    2025-07-02 05:59:45.000000000
Updated:    2025-08-20 03:05:11.000000000
Patch Set:  4
Insertions: +14
Deletions:  -8
Comments:   14 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Chris Horn: +1; Oleg Drokin: +2; Timothy Day: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, James Simmons, Chris Horn, Timothy Day

--- Commit Message ---
LU-19152 lnet: struct lnet_ioctl_config_ni too large for stack

Dynamically allocate temporary instance to avoid requiring stack

  CC [M]  /home/shaun/lustre-release/lnet/lnet/api-ni.o
api-ni.c: In function 'lnet_net_cmd':
api-ni.c:6513:1: error: the frame size of 1040 bytes is larger \
                 than 1024 bytes [-Werror=frame-larger-than=]
 6513 | }
      | ^

Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I02cc4a15a859bd739b979563310e91f235d03981
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60008
Reviewed-by: Chris Horn <chris.horn@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Timothy Day <timday@amazon.com>
Tested-by: jenkins <devops@whamcloud.com>

--- Review History ---

--- Message (Shaun Tancheff, 2025-07-02 05:59:45.000000000) ---
Uploaded patch set 1.

--- Message (Lustre Gerrit Janitor, 2025-07-02 06:02:35.000000000) ---
Patch Set 1:

(1 comment)

centos7: Compile failed


 Job output URL: https://testing.whamcloud.com/gerrit-janitor/53134/results.html

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-07-02 06:07:54.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (Shaun Tancheff, 2025-07-02 06:29:15.000000000) ---
Uploaded patch set 2.

--- Message (jenkins, 2025-07-02 06:29:19.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/114739/ : ABORTED

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-07-02 06:32:45.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (jenkins, 2025-07-02 07:04:01.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/114741/ : SUCCESS

--- Message (James Simmons, 2025-07-02 12:14:42.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Timothy Day, 2025-07-02 14:24:11.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Chris Horn, 2025-07-02 15:29:31.000000000) ---
Patch Set 2: Code-Review+1

--- Message (wc-checkpatch, 2025-07-07 20:20:45.000000000) ---
Patch Set 2:

(4 comments)

4 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (wc-checkpatch, 2025-07-28 18:24:13.000000000) ---
Patch Set 2: Code-Review-1

This change cannot be cherry-picked to master.
Please rebase the change locally and upload the rebased commit for review.

--- Message (wc-checkpatch, 2025-07-28 18:57:38.000000000) ---
Patch Set 2: -Code-Review

(4 comments)

4 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Shaun Tancheff, 2025-08-01 00:25:47.000000000) ---
Patch Set 3: Patch Set 2 was rebased

Copied Votes:
* Code-Review+1 (copy condition: "changekind:NO_CHANGE OR changekind:NO_CODE_CHANGE OR **changekind:TRIVIAL_REBASE** OR is:MIN")

Outdated Votes:
* Verified+1, Verified-1 (copy condition: "changekind:NO_CHANGE OR changekind:NO_CODE_CHANGE")

--- Message (jenkins, 2025-08-01 12:27:51.000000000) ---
Patch Set 3: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/115448/ : FAILURE

--- Message (Shaun Tancheff, 2025-08-05 01:44:35.000000000) ---
Patch Set 3:

(1 comment)

--- Message (wc-checkpatch, 2025-08-05 01:52:34.000000000) ---
Patch Set 3:

(4 comments)

4 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (jenkins, 2025-08-05 02:23:20.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/115535/ : SUCCESS

--- Message (Autotest, 2025-08-05 13:33:00.000000000) ---
Patch Set 3:

Onyx Autotest retesting enforced review-dne-zfs-part-3 session on el8.10-x86_64/zfs servers and clients for build 115535 patch 3. Requested by stancheff because of LU-18652.

--- Message (Oleg Drokin, 2025-08-20 03:05:09.000000000) ---
Patch Set 3: Code-Review+2

--- Message (Oleg Drokin, 2025-08-20 03:05:11.000000000) ---
Change has been successfully cherry-picked as 8e9abba6383ec98843328fd66bb54913bb4dff6c
